--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-lazy-load": "^3.0.13",
+    "react-lazyload": "^2.6.5",
     "react-mason": "^1.1.2",
     "react-masonry-component": "^6.2.1",
     "react-masonry-css": "^1.0.14",
