--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "muicss": "^0.10.1",
     "react": "^16.12.0",
+    "react-animation": "^1.2.2",
     "react-dom": "^16.12.0",
     "react-infinite-scroller": "^1.2.4",
     "react-lazy-load": "^3.0.13",
